--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -38,3 +38,8 @@ h1, h2, h3, h4, h5, h6 {
         padding: 4rem 16rem;
     }
 }
+@media only screen and (min-width: 2560px) {
+    .header {
+        padding: 4rem 32rem;
+    }
+}
