--- a/src/components/ChangeIntervalButtons/ChangeIntervalButtons.module.css
+++ b/src/components/ChangeIntervalButtons/ChangeIntervalButtons.module.css
@@ -4,6 +4,7 @@
     grid-row: 2/3;
     align-self: end;
 }
+
 .change_interval_button {
     background-color: var(--fill-color);
     padding: 1rem 0.5rem;
@@ -15,25 +16,28 @@
     width: 50px;
     font-size: 0.75rem;
 }
+
 .active {
     background-color: var(--accent-color);
     color: var(--font-color-contrast);
 }
+
 .buttons_label {
     font-size: 1.25rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {}
 
-}
 @media only screen and (min-width: 1024px) {
     .change_interval_buttons_container {
         grid-column: 5/7;
         grid-row: 1/2;
     }
+
     .change_interval_button {
         font-size: 1rem;
     }
+
     .buttons_label {
         font-size: 1.5rem;
     }
